# schema-registry

./: .bazelrc  .dockerignore  .gitignore  .pre-commit-config.yaml  BUILD.bazel  BUILD.google  COGENT.md  Dockerfile  Jenkinsfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  WORKSPACE  WORKSPACE.bazel  build-iceberg-connector-updated.sh  build-iceberg-connector.sh  classpathModules.cache  confluent-schema-registry.spec.in  create_archive.sh  create_spec.sh  generate-licenses-readme.txt  import_external.bzl  junit5.bzl  licenses-and-notices.html  macros.bzl  maven_install.json  pom.xml  publish-local-m2.sh  service.yml  sonar-project.properties  tests.bzl  third_party.bzl  variables.bzl  version.txt
avro-converter/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
avro-converter/src/test/avro/: Date.avsc  Decimal.avsc  Enum.avsc  EnumUnion.avsc  MultiTypeUnionMessage.avsc  RepeatedTypeWithDefault.avsc  RepeatedTypeWithDoc.avsc  Time.avsc  Timestamp.avsc  repeatedTypeWithDoc.avsc
avro-data/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
avro-data/src/test/avro/: ArrayOfRecordsWithDefault.avsc  AvroMessage.avsc  DocTestRecord.avsc  EnumStringUnion.avsc  EnumUnion.avsc  RepeatedTypeWithDocFull.avsc
avro-serde/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
avro-serde/src/test/avro/: extended_user.avsc
avro-serializer/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
avro-serializer/src/test/avro/: annotated_user.avsc  extended_user.avsc  grant.avsc  union_test_grant.avsc  union_test_union.avsc  union_test_user.avsc  user.avsc
avro-serializer/src/test/resources/: log4j.properties  log4j2.xml  log4j2.yaml
benchmark/: BUILD.bazel  README.md  pom.xml  service.yml  sonar-project.properties
benchmark/src/main/resources/: log4j.properties  log4j2.xml  log4j2.yaml
client/: BUILD.bazel  MANIFEST.MF  pom.xml  service.yml  sonar-project.properties
client-console-scripts/: BUILD.bazel  MANIFEST.MF  pom.xml
client-console-scripts/src/assembly/: resources.xml
client-encryption/: BUILD.bazel  MANIFEST.MF  pom.xml
client-encryption-aws/: BUILD.bazel  MANIFEST.MF  pom.xml
client-encryption-azure/: BUILD.bazel  MANIFEST.MF  pom.xml
client-encryption-gcp/: BUILD.bazel  MANIFEST.MF  pom.xml
client-encryption-hcvault/: BUILD.bazel  MANIFEST.MF  pom.xml
client-encryption/src/test/proto/: BUILD.bazel  Widget.proto  WidgetBytes.proto
client/src/main/resources/: schema-registry-client-app.properties
core/: BUILD.bazel  LICENSE  MANIFEST.MF  pom.xml  service.yml  sonar-project.properties
core/sql/: ddl.sql
core/src/main/resources/: log4j.properties  log4j2.xml  log4j2.yaml  openapi.yaml  schema-registry-app.properties  swagger-core-bazel.properties
core/src/test/avro/: record.avsc  subrecord.avsc
core/src/test/proto/: BUILD.bazel  ref.proto  root.proto
core/src/test/resources/: log4j.properties  log4j2.xml  log4j2.yaml  schema-md5-golden-data.json  testauth.properties
findbugs/: BUILD.bazel  findbugs-exclude.xml
json-schema-converter/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
json-schema-provider/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
json-schema-provider/src/test/resources/: all-schemas.json  diff-combined-schema-examples-2020-12.json  diff-combined-schema-examples.json  diff-schema-examples-2020-12.json  diff-schema-examples.json  recursive-schema.json
json-schema-serde/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
json-schema-serializer/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
json-serializer/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
maven-plugin/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties  temp.json
maven-plugin/src/main/resources/: BUILD.bazel
package-kafka-serde-tools/: BUILD.bazel  MANIFEST.MF  pom.xml
package-kafka-serde-tools/src/assembly/: development.xml  package.xml
package-schema-registry/: BUILD.bazel  Dockerfile  MANIFEST.MF  pom.xml  requirements.txt  setup.py  tox.ini
package-schema-registry/src/assembly/: development.xml  package.xml  standalone.xml
package-schema-registry/test/: test_schema_registry.py
package-schema-registry/test/fixtures/: cluster-bridged-plain.yml  cluster-host-plain.yml  cluster-host-ssl.yml  standalone-config.yml  standalone-network.yml
protobuf-converter/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
protobuf-converter/src/test/proto/: BUILD.bazel  key.proto  keyvalue.proto  keyvalueoptional.proto  keyvalueproto2.proto  keyvaluewrapper.proto  mapreferences.proto  nestedfield.proto  recursivekeyvalue.proto
protobuf-converter/src/test/resources/: log4j.properties  log4j2.xml  log4j2.yaml
protobuf-provider/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
protobuf-provider/src/test/resources/: BUILD.bazel  diff-schema-examples-with-meta.json  diff-schema-examples.json
protobuf-serde/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
protobuf-serializer/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
protobuf-serializer/src/test/java/: PublicTestProto.java
protobuf-serializer/src/test/proto/: BUILD.bazel  CustomOptions.proto  CustomOptions2.proto  DateValue.proto  DecimalValue.proto  DecimalValuePb2.proto  DependencyTestProto.proto  DescriptorRef.proto  EnumReference.proto  EnumRoot.proto  EnumUnion.proto  Int16Value.proto  Int8Value.proto  KeyTimestampValue.proto  NestedTestProto.proto  PublicTestProto.proto  Ranges.proto  SInt32Value.proto  SInt64Value.proto  TestOptionalProto.proto  TestProto.proto  TimeOfDayValue.proto  TimestampValue.proto  UInt32Value.proto  common_proto.proto  exampleProtoAcme.proto  exampleProtoCriteo.proto  metadata_proto.proto
protobuf-types/: BUILD.bazel  MANIFEST.MF  pom.xml  sonar-project.properties
protobuf-types/src/main/proto/: BUILD.bazel
schema-converter/: BUILD.bazel  MANIFEST.MF  pom.xml
schema-rules/: BUILD.bazel  MANIFEST.MF  pom.xml
schema-rules/src/test/avro/: customer.avsc  expiringwidget.avsc  user.avsc  (+3 more)
(+2057 files in other folders)
