load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_filegroup", "pkg_files", "pkg_mklink")

# gazelle:prefix github.com/your/project
# gazelle:java_maven_install_file maven_install.json

#gazelle(
#    name = "gazelle",
#    gazelle = ":gazelle_bin",
#)
#
#gazelle_binary(
#    name = "gazelle_bin",
#    languages = DEFAULT_LANGUAGES + [
#        "@contrib_rules_jvm//java/gazelle",
#    ],
#)

pkg_files(
    name = "package_docs",
    srcs = [
        "version.txt",
        "README.md",
        "LICENSE",
        "LICENSE-ConfluentCommunity",
    ],
    visibility = ["//:__subpackages__"],
)

pkg_files(
    name = "notices",
    srcs = glob(["notices/**/*"]),
    visibility = ["//:__subpackages__"],
)

pkg_files(
    name = "licenses",
    srcs = glob(["licenses/**/*"]),
    visibility = ["//:__subpackages__"],
)

pkg_files(
    name = "config",
    srcs = glob(["config/**/*"]),
    visibility = ["//:__subpackages__"],
)
