load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite", "java_library")
# gazelle:java_module_granularity module

java_library(
    name = "avro-serde",
    srcs = [
        "src/main/java/io/confluent/kafka/streams/serdes/avro/ConfigurationUtils.java",
        "src/main/java/io/confluent/kafka/streams/serdes/avro/GenericAvroDeserializer.java",
        "src/main/java/io/confluent/kafka/streams/serdes/avro/GenericAvroSerde.java",
        "src/main/java/io/confluent/kafka/streams/serdes/avro/GenericAvroSerializer.java",
        "src/main/java/io/confluent/kafka/streams/serdes/avro/PrimitiveAvroSerde.java",
        "src/main/java/io/confluent/kafka/streams/serdes/avro/ReflectionAvroDeserializer.java",
        "src/main/java/io/confluent/kafka/streams/serdes/avro/ReflectionAvroSerde.java",
        "src/main/java/io/confluent/kafka/streams/serdes/avro/ReflectionAvroSerializer.java",
        "src/main/java/io/confluent/kafka/streams/serdes/avro/SpecificAvroDeserializer.java",
        "src/main/java/io/confluent/kafka/streams/serdes/avro/SpecificAvroSerde.java",
        "src/main/java/io/confluent/kafka/streams/serdes/avro/SpecificAvroSerializer.java",
    ],
    visibility = ["//:__subpackages__"],
    exports = ["@maven//:org_apache_avro_avro"],
    deps = [
        "//avro-serializer",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_apache_kafka_kafka_clients",
    ],
)

java_test_suite(
    name = "avro-serde-tests",
    srcs = [
        "src/test/java/io/confluent/kafka/example/Widget.java",
        "src/test/java/io/confluent/kafka/streams/serdes/avro/AvroUtils.java",
        "src/test/java/io/confluent/kafka/streams/serdes/avro/ConfigurationUtilsTest.java",
        "src/test/java/io/confluent/kafka/streams/serdes/avro/GenericAvroSerdeTest.java",
        "src/test/java/io/confluent/kafka/streams/serdes/avro/PrimitiveAvroSerdeTest.java",
        "src/test/java/io/confluent/kafka/streams/serdes/avro/ReflectionAvroSerdeGenericTest.java",
        "src/test/java/io/confluent/kafka/streams/serdes/avro/ReflectionAvroSerdeSpecificTest.java",
        "src/test/java/io/confluent/kafka/streams/serdes/avro/SpecificAvroSerdeTest.java",
    ],
    deps = [
        ":avro-serde",
        "//avro-serializer",
        "//schema-serializer",
        "//avro-serializer:avro-resources",
        "//core",
        "@maven//:junit_junit",
        "@maven//:org_apache_avro_avro",
        "@maven//:org_hamcrest_hamcrest_core",
    ],
)
