load("@contrib_rules_jvm//java:defs.bzl", "java_library", "java_test_suite")
# gazelle:java_module_granularity module

java_library(
    name = "client-encryption-hcvault",
    srcs = [
        "src/main/java/io/confluent/kafka/schemaregistry/encryption/hcvault/HcVaultFieldEncryptionExecutor.java",
        "src/main/java/io/confluent/kafka/schemaregistry/encryption/hcvault/HcVaultKmsAead.java",
        "src/main/java/io/confluent/kafka/schemaregistry/encryption/hcvault/HcVaultKmsClient.java",
    ],
    visibility = ["//:__subpackages__"],
    exports = ["@maven//:com_google_crypto_tink_tink"],
    deps = [
        "//client-encryption",
        "@maven//:com_bettercloud_vault_java_driver",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_google_guava_guava",
    ],
)

java_test_suite(
    name = "client-encryption-hcvault-tests",
    srcs = [
        "src/test/java/io/confluent/kafka/schemaregistry/encryption/hcvault/HcVaultFieldEncryptionExecutorTest.java",
        "src/test/java/io/confluent/kafka/schemaregistry/encryption/hcvault/HcVaultFieldEncryptionProperties.java",
        "src/test/java/io/confluent/kafka/schemaregistry/encryption/hcvault/RestApiHcVaultFieldEncryptionTest.java",
    ],
    deps = [
        ":client-encryption-hcvault",
        "//avro-serializer",
        "//client-encryption",
        "//client-encryption:test-utils",
        "//core",
        "//schema-serializer",
        "@maven//:com_bettercloud_vault_java_driver",
        "@maven//:com_google_crypto_tink_tink",
        "@maven//:com_squareup_okio_okio",
        "@maven//:com_squareup_okio_okio_jvm",
        "@maven//:org_mockito_mockito_core",
    ],
)
